objects/CMPL123CME__TGA__c.object
<CustomObject>
    <description>TGA</description>
    <fields>
        <fullName>BMX_Approve_Done_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approve Done By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TGA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Approve_Done_On__c</fullName>
        <label>Approve Done On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Cancel_Done_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cancel Done By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TGA1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Cancel_Done_On__c</fullName>
        <label>Cancel Done On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Close_Date__c</fullName>
        <label>Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Close_Not_Locally_Reporting_Done_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Close - Not Locally Reporting Done By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TGA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Close_Not_Locally_Reporting_Done_On__c</fullName>
        <label>Close - Not Locally Reporting Done On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Close_Report_Done_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Close Report Done By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TGA3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Close_Report_Done_On__c</fullName>
        <label>Close Report Done On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Competent_Authority_Number__c</fullName>
        <defaultValue>'N/A'</defaultValue>
        <label>Competent Authority Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Date_of_Submission__c</fullName>
        <label>Date of Submission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMX_Days_in_Pending_Response__c</fullName>
        <formula>MFLOOR(NOW()- BMX_Pending_Response_From__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Pending Response</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMX_Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMX_Local_Assessment_Decision__c</fullName>
        <description>US-AER-047</description>
        <formula>If( BMX_Local_Assessment__r.RecordType.DeveloperName = 'Local_Assessment', TEXT(BMX_Local_Assessment__r.BMX_Is_Reportable__c) , '' )</formula>
        <label>Local Assessment Decision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Local_Assessment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local Assessment</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CMPL123CME__Questionnaire__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Local Assessment</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CMPL123CME__Questionnaire__c</referenceTo>
        <relationshipLabel>TGA</relationshipLabel>
        <relationshipName>TGA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Pending_Response_From__c</fullName>
        <formula>IF( CMPL123_WF_Status__c ='Pending Response',CMPL123_WF_Action_Performed_On__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pending Response From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Reportable_Country__c</fullName>
        <defaultValue>"Australia"</defaultValue>
        <label>Reportable Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Rework_Done_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rework Done By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TGA4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Rework_Done_On__c</fullName>
        <label>Rework Done On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Submit_Report_Done_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submit Report Done By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TGA6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Submit_Report_Done_On__c</fullName>
        <label>Submit Report Done On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Submit_for_Review_Done_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submit for Review Done By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TGA5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Submit_for_Review_Done_On__c</fullName>
        <label>Submit for Review Done On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Time_to_Notify_the_CA__c</fullName>
        <formula>IF( ISBLANK( BMX_Local_Assessment__r.BMX_Global_Assessment__r.BMX_Revised_Awareness_Date__c ), TEXT((BMX_Date_of_Submission__c ) - CMPL123CME__Complaint__r.BMX_Customer_Contact_Date__c) ,
TEXT((BMX_Date_of_Submission__c ) - BMX_Local_Assessment__r.BMX_Global_Assessment__r.BMX_Revised_Awareness_Date__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time to Notify the CA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__ARTG_Mfr__c</fullName>
        <description>ARTG Mfr. #</description>
        <inlineHelpText>ARTG Mfr. #</inlineHelpText>
        <label>ARTG Mfr. #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Additional_Comments__c</fullName>
        <description>Additional Comments</description>
        <inlineHelpText>Additional Comments</inlineHelpText>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Age_yrs_mnths__c</fullName>
        <description>Age (yrs, mnths)</description>
        <inlineHelpText>Age (yrs, mnths)</inlineHelpText>
        <label>Age (yrs, mnths)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Authorised_Representative_Address__c</fullName>
        <description>Authorised Representative Address</description>
        <inlineHelpText>Authorised Representative Address</inlineHelpText>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Authorised_Representative_Company__c</fullName>
        <description>Authorised Representative Company</description>
        <inlineHelpText>Authorised Representative Company</inlineHelpText>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Authorised_Representative_Email__c</fullName>
        <description>Authorised Representative Email</description>
        <inlineHelpText>Authorised Representative Email</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Authorised_Representative_Fax__c</fullName>
        <description>Authorised Representative Fax</description>
        <inlineHelpText>Authorised Representative Fax</inlineHelpText>
        <label>Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Authorised_Representative_Name__c</fullName>
        <description>Name</description>
        <inlineHelpText>Authorised Representative Name</inlineHelpText>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Authorised_Representative_Tel__c</fullName>
        <description>Authorised Representative Tel</description>
        <inlineHelpText>Authorised Representative Tel</inlineHelpText>
        <label>Tel.</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Brand_Name__c</fullName>
        <description>Brand Name</description>
        <inlineHelpText>Brand Name</inlineHelpText>
        <label>Brand Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Catalogue__c</fullName>
        <description>Catalogue #</description>
        <inlineHelpText>Catalogue #</inlineHelpText>
        <label>Catalogue #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Complaint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Complaint</description>
        <inlineHelpText>Complaint</inlineHelpText>
        <label>Complaint</label>
        <referenceTo>CMPL123CME__Complaint__c</referenceTo>
        <relationshipLabel>TGA</relationshipLabel>
        <relationshipName>TGA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Contact_Name__c</fullName>
        <description>Contact Name</description>
        <inlineHelpText>Contact Name</inlineHelpText>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Contact_name_at_site_of_event__c</fullName>
        <description>Contact name at site of event</description>
        <inlineHelpText>Contact name at site of event</inlineHelpText>
        <label>Contact name at site of event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Corrective_action_taken__c</fullName>
        <description>Corrective action taken relevant to the care of the patient:</description>
        <inlineHelpText>Corrective action taken relevant to the care of the patient:</inlineHelpText>
        <label>Corrective action taken</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Countries_where_these_similar_AE_Occured__c</fullName>
        <description>Countries where these similar adverse events occurred:</description>
        <inlineHelpText>Countries where these similar adverse events occurred</inlineHelpText>
        <label>Countries where these similar AE occured</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Date_mfr_aware__c</fullName>
        <description>Date mfr aware</description>
        <inlineHelpText>Date mfr aware</inlineHelpText>
        <label>Date mfr aware</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Date_of_adverse_event__c</fullName>
        <description>Date of adverse event</description>
        <inlineHelpText>Date of adverse event</inlineHelpText>
        <label>Date of adverse event</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Date_of_next_report__c</fullName>
        <description>Date of next report(max 30 days from A)</description>
        <inlineHelpText>Date of next report(max 30 days from A)</inlineHelpText>
        <label>Date of next report(max 30 days from A)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Date_of_this_report__c</fullName>
        <description>Date of this report</description>
        <inlineHelpText>Date of this report</inlineHelpText>
        <label>Date of this report</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Description_of_event_or_problem__c</fullName>
        <description>Description of event or problem</description>
        <inlineHelpText>Description of event or problem</inlineHelpText>
        <label>Description of event or problem</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Device_ARTG__c</fullName>
        <description>Device ARTG #</description>
        <inlineHelpText>Device ARTG #</inlineHelpText>
        <label>Device ARTG #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Device_Disposition_Current_Location__c</fullName>
        <description>Device Disposition/Current Location</description>
        <inlineHelpText>Device Disposition/Current Location</inlineHelpText>
        <label>Device Disposition/Current Location</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Device_Information_Email__c</fullName>
        <description>E-mail</description>
        <inlineHelpText>E-mail</inlineHelpText>
        <label>E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Device_Information_Fax__c</fullName>
        <description>Fax</description>
        <inlineHelpText>Fax</inlineHelpText>
        <label>Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Device_Information_Tel__c</fullName>
        <description>Tel.</description>
        <inlineHelpText>Tel.</inlineHelpText>
        <label>Tel.</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Explant_Date__c</fullName>
        <description>Explant Date</description>
        <inlineHelpText>Explant Date</inlineHelpText>
        <label>Explant Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__GMDN_Code_Text__c</fullName>
        <label>GMDN Code Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__GMDN_Code__c</fullName>
        <description>GMDN Code</description>
        <inlineHelpText>GMDN Code</inlineHelpText>
        <label>GMDN Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Healthcare_Facility_Address__c</fullName>
        <description>Healthcare Facility Address</description>
        <inlineHelpText>Healthcare Facility Address</inlineHelpText>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Healthcare_Facility_Email__c</fullName>
        <description>Healthcare_Facility_Email</description>
        <inlineHelpText>Healthcare Facility Email</inlineHelpText>
        <label>E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Healthcare_Facility_Fax__c</fullName>
        <description>Healthcare Facility Fax</description>
        <inlineHelpText>Healthcare Facility Fax</inlineHelpText>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Healthcare_Facility_Name__c</fullName>
        <description>Healthcare_Facility_Name</description>
        <inlineHelpText>Healthcare Facility Name</inlineHelpText>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Healthcare_Facility_Tel__c</fullName>
        <description>Healthcare Facility Tel</description>
        <inlineHelpText>Healthcare Facility Tel</inlineHelpText>
        <label>Tel</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Implant_Date__c</fullName>
        <description>Implant Date</description>
        <inlineHelpText>Implant Date</inlineHelpText>
        <label>Implant Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__List_of_other_devices_involved__c</fullName>
        <description>List of other devices involved</description>
        <inlineHelpText>List of other devices involved</inlineHelpText>
        <label>List of other devices involved</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Manufacturers_Device_Analysis_Results__c</fullName>
        <description>Manufacturers Device Analysis Results</description>
        <inlineHelpText>Manufacturers Device Analysis Results</inlineHelpText>
        <label>Manufacturers Device Analysis Results</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Mfr_Name__c</fullName>
        <description>Mfr. Name</description>
        <inlineHelpText>Mfr. Name</inlineHelpText>
        <label>Mfr. Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Mfr_Sponsor_aware_of_other_similar_event__c</fullName>
        <description>Mfr/Sponsor aware of other similar events? ( number or rate)</description>
        <inlineHelpText>Mfr/Sponsor aware of other similar events? ( number or rate)</inlineHelpText>
        <label>Mfr/Sponsor aware of other similar event</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Mfr_report_Number__c</fullName>
        <description>Mfr report #</description>
        <inlineHelpText>Mfr report #</inlineHelpText>
        <label>Mfr report #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Model__c</fullName>
        <description>Model #</description>
        <inlineHelpText>Model #</inlineHelpText>
        <label>Model #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Operator_of_Device_at_Time_of_Event__c</fullName>
        <description>Operator of Device at Time of Event</description>
        <inlineHelpText>Operator of Device at Time of Event</inlineHelpText>
        <label>Operator of Device at Time of Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HC Profnal</fullName>
                </value>
                <value>
                    <fullName>Other Caregiver</fullName>
                </value>
                <value>
                    <fullName>Patient</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Other_Regulatory_Authorities_Reported__c</fullName>
        <description>Identity of all other Regulatory Authorities, Notified Bodies, etc., 
where this report was also sent.</description>
        <inlineHelpText>Identity of all other Regulatory Authorities, Notified Bodies, etc., where this report was also sent.</inlineHelpText>
        <label>Other Regulatory Authorities Reported</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Patient_Gender__c</fullName>
        <description>Gender</description>
        <inlineHelpText>Gender</inlineHelpText>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Patient_Weight__c</fullName>
        <description>Weight</description>
        <inlineHelpText>Weight</inlineHelpText>
        <label>Weight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Patient_history_co_morbidities__c</fullName>
        <description>Patient history (co-morbidities and medication):</description>
        <inlineHelpText>Patient history (co-morbidities and medication):</inlineHelpText>
        <label>Patient history (co-morbidities/medica.)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Patient_outcome__c</fullName>
        <description>Patient outcome:</description>
        <inlineHelpText>Patient outcome</inlineHelpText>
        <label>Patient outcome</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Remedial_Action_Corrective_Action__c</fullName>
        <description>Remedial Action/Corrective Action/Preventive Action</description>
        <inlineHelpText>Remedial Action/Corrective Action/Preventive Action</inlineHelpText>
        <label>RA/CA/PA</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Report_Category__c</fullName>
        <description>Report Category</description>
        <inlineHelpText>Report Category</inlineHelpText>
        <label>Report Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>S Pblc Hlth Threat</fullName>
                </value>
                <value>
                    <fullName>Death/Serious Injury</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Report_Type__c</fullName>
        <description>Report Type</description>
        <inlineHelpText>Report Type</inlineHelpText>
        <label>Report Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial</fullName>
                </value>
                <value>
                    <fullName>Follow-Up</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Trend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Ser_or_Lot__c</fullName>
        <description>Ser. or Lot #’s</description>
        <inlineHelpText>Ser. or Lot #’s</inlineHelpText>
        <label>Ser. or Lot #’s</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Specific_Device_Address__c</fullName>
        <description>Address</description>
        <inlineHelpText>Address</inlineHelpText>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__TGA_DIR_Number__c</fullName>
        <description>TGA DIR #</description>
        <inlineHelpText>TGA DIR #</inlineHelpText>
        <label>TGA DIR #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Usage_of_Device__c</fullName>
        <description>Usage of Device</description>
        <inlineHelpText>Usage of Device</inlineHelpText>
        <label>Usage of Device</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single Use</fullName>
                </value>
                <value>
                    <fullName>Reuse of Single Use</fullName>
                </value>
                <value>
                    <fullName>Reuse of Reusable</fullName>
                </value>
                <value>
                    <fullName>Re-serviced/Refurbished</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123Rule_Key_Value__c</fullName>
        <label>Rule Field Update Key Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123Task_Key_Value__c</fullName>
        <label>Task Field Update Key Value</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action_Performed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workflow Action Performed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CMPL123CMETGAcCMPL123_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action_Performed_On__c</fullName>
        <label>Workflow Action Performed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action__c</fullName>
        <label>Workflow Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Status__c</fullName>
        <label>Workflow Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TGA</label>
    <listViews>
        <fullName>CMPL123CME__All</fullName>
        <columns>NAME</columns>
        <columns>CMPL123CME__Complaint__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CMPL123_WF_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TGA-{0000}</displayFormat>
        <label>TGA</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TGA</pluralLabel>
    <recordTypes>
        <fullName>BMX_Lock_TGA</fullName>
        <active>true</active>
        <label>Lock TGA</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Prevent_Creation_or_Edit_of_TGA</fullName>
        <active>false</active>
        <description>Cannot create a new TGA from the Complaint record at any time when the Complaint record is Locked.</description>
        <errorConditionFormula>OR( 
AND(ISNEW(), CMPL123CME__Complaint__r.CMPL123CME__CMPL123_WF_Status__c ='Closed'), 
CMPL123CME__Complaint__r.CMPL123CME__CMPL123_WF_Status__c ='Closed')</errorConditionFormula>
        <errorMessage>Cannot create/edit a TGA for closed Complaint</errorMessage>
    </validationRules>
</CustomObject>